Subject: [PATCH] rs6000: Fix logic for when to emit .machine (PR71216)

The current logic determining whether to use .machine in the generated
asm code puts it there if the compiler is not configured with a default
target cpu, _or_ no -mcpu= was given on the command line.  It should
be "and" instead.


	PR target/71216
	* config/rs6000/rs6000.c (rs6000_file_start): Fix condition for
	when to emit a ".machine" pseudo-op.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@238639 138bc75d-0d04-0410-961f-82ee72b054a4